--- a/Auctionieer/appsettings.json
+++ b/Auctionieer/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //Postgres connection
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost:5432;User=postgres;Password=12345;Database=AuctionDb"
+  }
 }
