--- a/Auctionieer/Dockerfile
+++ b/Auctionieer/Dockerfile
@@ -9,16 +9,15 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Auctionieer/Auctionieer.csproj", "Auctionieer/"]
-RUN dotnet restore "./Auctionieer/./Auctionieer.csproj"
+COPY ["Auctionieer/Auctionieer.Api.csproj", "Auctionieer/"]
+RUN dotnet restore "./Auctionieer/./Auctionieer.Api.csproj"
 COPY . .
 WORKDIR "/src/Auctionieer"
-RUN dotnet build "./Auctionieer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Auctionieer.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Auctionieer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
+RUN dotnet publish "./Auctionieer.Api.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
