--- a/Auctionieer/appsettings.json
+++ b/Auctionieer/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   //Postgres connection
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:5432;User=postgres;Password=12345;Database=AuctionDb"
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=12345;Database=AuctionDb;"
+    //Pooling=true;Maximum Pool Size=1024;
   }
 }
