--- a/SearchService/SearchService.csproj
+++ b/SearchService/SearchService.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="MongoDB.Entities" Version="23.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
