--- a/Actionieer.Core/Auctionieer.Core.csproj
+++ b/Actionieer.Core/Auctionieer.Core.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+  </ItemGroup>
+
 </Project>
