--- a/SearchService/SearchService.csproj
+++ b/SearchService/SearchService.csproj
@@ -1,21 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <UserSecretsId>5afee8a9-5791-4939-a8e2-2b68f10280fa</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<TargetFramework>net8.0</TargetFramework>
+	<Nullable>disable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
+	<InvariantGlobalization>false</InvariantGlobalization>
+	<UserSecretsId>5afee8a9-5791-4939-a8e2-2b68f10280fa</UserSecretsId>
+	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
-    <PackageReference Include="MongoDB.Entities" Version="23.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+	<PackageReference Include="AutoMapper" Version="12.0.1" />
+	<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.1" />
+	<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.1" />
+	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+	<PackageReference Include="MongoDB.Entities" Version="23.0.1" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<ProjectReference Include="..\Actionieer.Core\Auctionieer.Core.csproj" />
+	<ProjectReference Include="..\Actionieer.Infrastructure\Auctionieer.Infrastructure.csproj" />
+	<ProjectReference Include="..\Auctionieer.Data\Auctionieer.Data.csproj" />
+	<ProjectReference Include="..\Auctionieer\Auctionieer.Api.csproj" />
+	<ProjectReference Include="..\ServiceContract\ServiceContract\ServiceContract.csproj" />
   </ItemGroup>
 
 </Project>
